5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1590_1017.log
== TEST (2019-03-30 21:35:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
from math import
d = R * acos(sen * (t1) * sen * (t2) + cos * (t1) * cos * (t2) * cos * (g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:36:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
from math import
d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:36:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
from math import *
d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:36:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
from math import *
d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:36:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
from math import *
d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:36:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
from math import *
d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- EXECUTION TIME:
0.178017
-- ERROR:
  File "/home/codebench/codes/1590/1017/main.py", line 11
    d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1\u2212g2))
                                                                ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:37:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    d = R * acos(sen(t1) * sen(t2) + cost1) * cos(t2) * cos(g1−g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:38:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:38:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 11
    d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:40:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 4
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:40:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:41:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))
-- ERROR:
File "XXXX", line 10
    d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:41:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    R = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:42:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    R = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 21:44:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")

-- EXECUTION TIME:
0.129909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 9, in <module>
    R = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:44:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:45:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
 from math import
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))

-- ERROR:
File "XXXX", line 10
    from math import
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:45:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))

-- ERROR:
File "XXXX", line 10
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:45:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))

-- ERROR:
File "XXXX", line 11
    d = R * acos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:46:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d = R * arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))

-- ERROR:
File "XXXX", line 11
    d = R * arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:51:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d = R * arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))

-- ERROR:
File "XXXX", line 11
    d = R * arccos(sen(t1) * sen(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:52:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    R = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:00:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

-- ERROR:
File "XXXX", line 11
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:01:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
from math import *
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

-- ERROR:
File "XXXX", line 11
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:01:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

-- ERROR:
File "XXXX", line 10
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:57:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = input("r:")
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:51:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(flower(input("Latitude de P1: ")))
g1 = radians(flower(input("longitude de P1:")))
t2 = radians(flower(input("latitude de P2:")))
g2 = radian(flower(input("longitude de P2:")))
R = 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:51:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(flower(input("Latitude de P1: ")))
g1 = radians(flower(input("longitude de P1:")))
t2 = radians(flower(input("latitude de P2:")))
g2 = radian(flower(input("longitude de P2:")))
R = 6371.01
d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d=R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                     ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:52:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(flower(input("Latitude de P1: ")))
g1 = radians(flower(input("longitude de P1:")))
t2 = radians(flower(input("latitude de P2:")))
g2 = radian(flower(input("longitude de P2:")))
R = 6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:54:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(flower(input("Latitude de P1: ")))
g1 = radians(flower(input("longitude de P1:")))
t2 = radians(flower(input("latitude de P2:")))
g2 = radian(flower(input("longitude de P2:")))
R = 6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:54:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(flower(input("Latitude de P1: ")))
g1 = radians(flower(input("longitude de P1:")))
t2 = radians(flower(input("latitude de P2:")))
g2 = radian(flower(input("longitude de P2:")))
R = 6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:56:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1−g2))
                                                                 ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:58:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:04:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:07:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
print(round(d, 2))

-- ERROR:
File "XXXX", line 10
    d = R * acos(sin(t1) * sin(t2) + cos(t1) * cos(t2) * cos(g1 − g2))
                                                                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:11:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de P1:")))
t2 = radians(float(input("latitude de P2:")))
g2 = radians(float(input("longitude de P2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:11:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1 = radians(float(input("LatP1: ")))
g1 = radians(float(input("longP1:")))
t2 = radians(float(input("latP2:")))
g2 = radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:13:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:14:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:14:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:14:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:14:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:14:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:15:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:15:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("LatP1: ")))
g1=radians(float(input("longP1:")))
t2=radians(float(input("latP2:")))
g2=radians(float(input("longP2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:16:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("Latp1: ")))
g1=radians(float(input("longp1:")))
t2=radians(float(input("latp2:")))
g2=radians(float(input("longp2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:16:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("Latp1: ")))
g1=radians(float(input("longp1:")))
t2=radians(float(input("latp2:")))
g2=radians(float(input("longp2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))

print(round(d, 2))

-- ERROR:
File "XXXX", line 11
    d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1−g2))
                                                       ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:19:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("Latp1: ")))
g1=radians(float(input("longp1:")))
t2=radians(float(input("latp2:")))
g2=radians(float(input("longp2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:22:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *

t1=radians(float(input("Latp1: ")))
g1=radians(float(input("longp1:")))
t2=radians(float(input("latp2:")))
g2=radians(float(input("longp2:")))
R = 6371.01
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d, 2))

-- EXECUTION TIME:
0.180782
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
